RESOLVED FIXED306945
[LibWebRTC] Incorrect video rotation handling for outgoing video sources
https://bugs.webkit.org/show_bug.cgi?id=306945
Summary [LibWebRTC] Incorrect video rotation handling for outgoing video sources
Philippe Normand
Reported 2026-02-04 03:18:34 PST
.
Attachments
Philippe Normand
Comment 1 2026-02-04 03:22:52 PST
Radar WebKit Bug Importer
Comment 2 2026-02-11 03:19:12 PST
EWS
Comment 3 2026-02-19 01:50:15 PST
Committed 307819@main (572723b91c3c): <https://commits.webkit.org/307819@main> Reviewed commits have been landed. Closing PR #57853 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.