[LibWebRTC] Incorrect video rotation handling for outgoing video sources https://bugs.webkit.org/show_bug.cgi?id=306945

Reviewed by Adrian Perez de Castro.

Add an accessor in RealtimeMediaSource to know whether the source is applying video rotation before
encoding or not. The RealtimeOutgoingVideoSource's m_isApplyingRotation value now mirrors the one
set in its inner RealtimeMediaSource instance. With this patch outgoing video frames are correctly
rotated when needed on Linux ports enabling LibWebRTC.

Canonical link: https://commits.webkit.org/307819@main