Source/WebCore/platform/mediastream/RealtimeOutgoingVideoSource.cpp
@@ -97,8 +97,8 @@ void RealtimeOutgoingVideoSource::setSource(Ref<MediaStreamTrackPrivate>&& newSo
 
     if (!m_areSinksAskingToApplyRotation)
         return;
-    if (!m_videoSource->source().setShouldApplyRotation())
-        m_shouldApplyRotation = true;
+    m_videoSource->source().setShouldApplyRotation();
+    m_isApplyingRotation = m_videoSource->source().isApplyingRotation();
 }
 
 void RealtimeOutgoingVideoSource::applyRotation()
@@ -108,8 +108,8 @@ void RealtimeOutgoingVideoSource::applyRotation()
             return;
 
         m_areSinksAskingToApplyRotation = true;
-        if (!m_videoSource->source().setShouldApplyRotation())
-            m_shouldApplyRotation = true;
+        m_videoSource->source().setShouldApplyRotation();
+        m_isApplyingRotation = m_videoSource->source().isApplyingRotation();
     });
 }
 
@@ -232,7 +232,7 @@ void RealtimeOutgoingVideoSource::sendBlackFramesIfNeeded()
     if (!m_blackFrame) {
         auto width = m_width;
         auto height = m_height;
-        if (!m_shouldApplyRotation && (m_currentRotation == webrtc::kVideoRotation_270 || m_currentRotation == webrtc::kVideoRotation_90))
+        if (!m_isApplyingRotation && (m_currentRotation == webrtc::kVideoRotation_270 || m_currentRotation == webrtc::kVideoRotation_90))
             std::swap(width, height);
 
         m_blackFrame = WTF::toRef(createBlackFrame(width, height));
@@ -255,7 +255,7 @@ void RealtimeOutgoingVideoSource::sendOneBlackFrame()
 void RealtimeOutgoingVideoSource::sendFrame(webrtc::scoped_refptr<webrtc::VideoFrameBuffer>&& buffer)
 {
     MonotonicTime timestamp = MonotonicTime::now();
-    webrtc::VideoFrame frame(buffer, m_shouldApplyRotation ? webrtc::kVideoRotation_0 : m_currentRotation, static_cast<int64_t>(timestamp.secondsSinceEpoch().microseconds()));
+    webrtc::VideoFrame frame(buffer, m_isApplyingRotation ? webrtc::kVideoRotation_0 : m_currentRotation, static_cast<int64_t>(timestamp.secondsSinceEpoch().microseconds()));
 
 #if !RELEASE_LOG_DISABLED
     ++m_frameCount;
